--- a/readme
+++ b/readme
@@ -2,7 +2,7 @@ Assignment 2 readme File
 
 ------------------------------------------------------------------------
 What is your name?
-
+Answer:Jason, L.
 
 
 ------------------------------------------------------------------------
@@ -12,7 +12,7 @@ in the "Policies" web page (also available on armlab in the file
 ~cos217/AuthorizedSourcesList ) to this section of the readme file,
 and edit it as appropriate.
 
-
+Answer: the linux man page. 
 
 ------------------------------------------------------------------------
 What unauthorized sources of information did you use to complete the
@@ -26,19 +26,18 @@ interaction, may additionally require the interaction being reported
 to the Committee on Discipline. Write "None" if you used no
 unauthorized sources of information.
 
-
-
+None
 ------------------------------------------------------------------------
 What is your assessment of the assignment? Was it helpful? Was it fun?
 
-
-
+it help me learn some string , array and pointer knowledge.
+ 
 ------------------------------------------------------------------------
 (optional) What information can you provide about your submission that
 will help your grader to grade it in the most favorable light? In
 particular, what bugs are in your submission?
 
-
+if the text contained character “犇”，the program will corrupt！
 
 ------------------------------------------------------------------------
 What warnings does splint generate on stra.c, and what are your
@@ -54,15 +53,19 @@ disagreements with them? Copy the critTer warnings here, and express
 your disagreement after each warning. If there are no warnings, then
 write "None."
 
-
-
+NONE
 ------------------------------------------------------------------------
 What warnings does splint generate on strp.c, and what are your
 disagreements with them? Copy the splint warnings here, and express your
 disagreement after each warning. If there are no warnings, then write
 "None."
 
-
+strp.c:21:12: Implicitly temp storage Dst returned as implicitly only: Dst
+  Temp storage (associated with a formal parameter) is transferred to a
+  non-temporary reference. The storage may be released or new aliases created.
+  (Use -temptrans to inhibit warning)
+strp.c:31:16: Parse Error. (For help on parse errors, see splint -help
+             parseerrors.
 
 ------------------------------------------------------------------------
 What warnings does critTer generate on strp.c, and what are your
@@ -70,13 +73,30 @@ disagreements with them? Copy the critTer warnings here, and express
 your disagreement after each warning. If there are no warnings, then
 write "None."
 
-
+NONE
 
 ------------------------------------------------------------------------
 What warnings does splint generate on replace.c, and what are your
 disagreements with them? Copy the splint warnings here, and express your
 disagreement after each warning. If there are no warnings, then write
-"None."
+
+replace.c: (in function replaceAndWrite)
+replace.c:39:25: Passed storage headPcline not completely defined (*headPcline
+                    is undefined): Str_copy (headPcline, ...)
+  Storage derivable from a parameter, return value or global is not defined.
+  Use /*@out@*/ to denote passed or returned storage which need not be defined.
+  (Use -compdef to inhibit warning)
+replace.c:40:25: Passed storage tailPcline not completely defined (*tailPcline
+                    is undefined): Str_copy (tailPcline, ...)
+replace.c:41:28: New fresh storage (type char *) passed as implicitly temp (not
+                    released): Str_concat(headPcline, pcTo)
+  A memory leak has been detected. Storage allocated locally is not released
+  before the last reference to it is lost. (Use -mustfreefresh to inhibit
+  warning)
+replace.c:42:28: New fresh storage (type char *) passed as implicitly temp (not
+                    released): Str_concat(headPcline, pcTo)
+replace.c:47:23: Fresh storage pcContain not released before return
+   replace.c:37:10: Fresh storage pcContain created
 
 
 
@@ -86,6 +106,7 @@ disagreements with them? Copy the critTer warnings here, and express
 your disagreement after each warning. If there are no warnings, then
 write "None."
 
+NONE
 
 
 ------------------------------------------------------------------------
@@ -93,6 +114,7 @@ Is it possible for Str_copy or Str_concat to call assert to verify
 that the destination memory area specified by the caller is large
 enough? Explain.
 
-
+it is possible ， because we just need to use assert to compare 
+the value of length both distination value  and source value.  
 
 ------------------------------------------------------------------------
